Template bug fix.

--- a/dj_utils/templates/dj_utils/tags/paginator.html
+++ b/dj_utils/templates/dj_utils/tags/paginator.html
@@ -1,4 +1,4 @@
-{% load url %}
+{% load dj_utils %}
 {% if page.paginator.num_pages > 1 %}
     <ul class="pagination">
         {% if page.has_previous %}
