--- a/dj_utils/templates/dj_utils/tags/meta_locale_links.html
+++ b/dj_utils/templates/dj_utils/tags/meta_locale_links.html
@@ -1,4 +1,6 @@
-<link rel="alternate" hreflang="x-default" href="{{ default_url }}">
-{% for lang, url in langs_urls.iteritems %}
-    <link rel="alternate" hreflang="{{ lang }}" href="{{ url }}">
-{% endfor %}
+{% if langs_urls %}
+    <link rel="alternate" hreflang="x-default" href="{{ default_url }}">
+    {% for lang, url in langs_urls.iteritems %}
+        <link rel="alternate" hreflang="{{ lang }}" href="{{ url }}">
+    {% endfor %}
+{% endif %}
