--- a/tests/templates/mail/test4.html
+++ b/tests/templates/mail/test4.html
@@ -1,16 +1,16 @@
 {% extends 'mail/base.html' %}
 
 
-{% block subject %}Test subject 6{% endblock %}
+{% block subject %}Test subject 4{% endblock %}
 
 
 {% block plain_body %}
-    {{ SITE_DOMAIN }}
+    {{ STATIC_CP_VALUE }}
 {% endblock %}
 
 
 {% block html_body %}
     <p>
-        {{ SITE_DOMAIN }}
+        {{ STATIC_CP_VALUE }}
     </p>
 {% endblock %}
