Upgrade. Update version to 0.2.0

--- a/dj_utils/templates/dj_utils/mail/test.html
+++ b/dj_utils/templates/dj_utils/mail/test.html
@@ -1,4 +1,4 @@
-{% block subject %}Test email from {{ SITE_DOMAIN }}{% endblock %}
+{% block subject %}Test email from {{ SITE.domain }}{% endblock %}
 
 
 {% block plain %}
